Istio-config/gateway-Keycloak.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak-gw
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: keycloak
      protocol: HTTPS
    hosts:
    - "keycloak.10-7-2-181.sslip.io"
    tls:
      mode: PASSTHROUGH
      credentialName: "keycloak-tls-secret"
...
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak-gw
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - keycloak.10-7-2-181.sslip.io
      port:
        name: keycloak-https
        number: 443
        protocol: HTTPS
      tls:
        maxProtocolVersion: TLSV1_3
        minProtocolVersion: TLSV1_2
        mode: PASSTHROUGH
