Istio-config/virtualService-Keycloak.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  gateways:
    - keycloak-gw
  hosts:
    - keycloak.10-7-2-181.sslip.io
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: keycloak-http
            port:
              number: 80
  tls:
    - match:
        - port: 8443
          sniHosts:
            - keycloak.10-7-2-181.sslip.io
      route:
        - destination:
            host: keycloak-http
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  gateways:
    - keycloak-gw
  hosts:
    - keycloak.10-7-2-181.sslip.io
  http:
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host:	keycloak-http.keycloak.svc.cluster.local
        port:
          number: 80
